mongo-express-app/ingress/myapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-internal-service
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
