mongo-express-app/ingress/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
    - host: dashboard.myapp.com
      http:
        paths:
          - backend:
              serviceName: kubernetes-dashboard-web
              servicePort: 8000
